Fixed alignment

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,9 +1,3 @@
-#logo-name-container {
-    color: black;
-    margin-left: 30px;
-    font-family: sans-serif;
-  }
-
 #logo-container {
     color: black;
     border-bottom: lightgray 2px solid;
@@ -15,6 +9,15 @@
 
   #logo-container > a {
     text-decoration: none;
+  }
+
+ #logo-name-container {
+    color: black;
+    margin-left: -30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-family: sans-serif;
   }
 
   #nav-container {
@@ -39,3 +42,19 @@
   .hidden {
     display: none;
   }
+
+  /* ul li:hover .profile-dropdown {
+    display: block;
+  }
+
+  .profile-dropdown {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    background-color: white;
+    border: 1px solid #ddd;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 10px;
+    width: 80px;
+    display: none;
+  } */
